tests/rosetta/out/Smalltalk/averages-median-3.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| qsel arr px pv last tmp i v tmp2 median half med |
qsel := [:a :k | arr := a.
[(((arr size)) > 1)] whileTrue: [.
px := ((now value) % ((arr size))).
pv := arr at: px.
last := (((arr size)) - 1).
tmp := arr at: px.
arr at: px put: arr at: last.
arr at: last put: tmp.
px := 0.
i := 0.
[(i < last)] whileTrue: [.
v := arr at: i.
((v < pv)) ifTrue: [
tmp2 := arr at: px.
arr at: px put: arr at: i.
arr at: i put: tmp2.
px := (px + 1).
] .
i := (i + 1).
].
.
((px = k)) ifTrue: [
pv.
] .
((k < px)) ifTrue: [
arr := arr copyFrom: (0 + 1) to: px.
] ifFalse: [
tmp2 := arr at: px.
arr at: px put: pv.
arr at: last put: tmp2.
arr := arr copyFrom: ((px + 1) + 1) to: arr size.
k := (k - ((px + 1))).
].
].
.
arr at: 0. ].
median := [:list | arr := list.
half := (((arr size)) / 2) asInteger.
med := qsel value: arr value: half.
((((((arr size)) % 2)) = 0)) ifTrue: [
(((med + (qsel value: arr value: (half - 1)))) / 2).
] .
med. ].
Transcript show: ((median value: {3. 1. 4. 1} asString)) printString; cr.
Transcript show: ((median value: {3. 1. 4. 1. 5} asString)) printString; cr.
